Usability Fixes - Time taken shoud say 1m 5 secs instead of 65 secs - Time Issued column title for Query Time - Select fields for Stats overlaps (StatTable.ServerMonitoringInfo.file_system_view_stats.physical_disks) - Increase width of table in stats - "Filters" label should be "Filter";

--- a/webroot/css/contrail.custom.css
+++ b/webroot/css/contrail.custom.css
@@ -555,6 +555,9 @@ rect.bordered {
 }
 
 /* Query Pages */
+.select-label {
+    width: 100%; text-overflow: ellipsis; overflow-x: hidden;
+}
 .advanced-options-link{
     font-size:10px;
     color:#999;
